# pip-tree

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pip_tree/: __init__.py
src/: pip_tree.py
